Cosmetic fixes in all plots

--- a/notebooks/2MDM-scan-parameters.ipynb
+++ b/notebooks/2MDM-scan-parameters.ipynb
@@ -15,6 +15,12 @@
     "ExecuteTime": {
      "end_time": "2024-01-31T14:45:31.167350Z",
      "start_time": "2024-01-31T14:45:30.326673Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2024-08-27T14:36:52.017684Z",
+     "iopub.status.busy": "2024-08-27T14:36:52.016894Z",
+     "iopub.status.idle": "2024-08-27T14:36:55.007079Z",
+     "shell.execute_reply": "2024-08-27T14:36:55.004279Z"
     }
    },
    "outputs": [],
@@ -63,6 +69,12 @@
      "end_time": "2024-01-31T14:45:32.917617Z",
      "start_time": "2024-01-31T14:45:31.229063Z"
     },
+    "execution": {
+     "iopub.execute_input": "2024-08-27T14:36:55.016593Z",
+     "iopub.status.busy": "2024-08-27T14:36:55.015585Z",
+     "iopub.status.idle": "2024-08-27T14:36:55.821807Z",
+     "shell.execute_reply": "2024-08-27T14:36:55.819103Z"
+    },
     "scrolled": true
    },
    "outputs": [
@@ -84,7 +96,14 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-08-27T14:36:55.971431Z",
+     "iopub.status.busy": "2024-08-27T14:36:55.970185Z",
+     "iopub.status.idle": "2024-08-27T14:36:56.005977Z",
+     "shell.execute_reply": "2024-08-27T14:36:56.003207Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -361,7 +380,14 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-08-27T14:36:56.016837Z",
+     "iopub.status.busy": "2024-08-27T14:36:56.015629Z",
+     "iopub.status.idle": "2024-08-27T14:36:56.092929Z",
+     "shell.execute_reply": "2024-08-27T14:36:56.089869Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Get scan parameters:\n",
@@ -386,7 +412,14 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-08-27T14:36:56.104267Z",
+     "iopub.status.busy": "2024-08-27T14:36:56.102270Z",
+     "iopub.status.idle": "2024-08-27T14:36:56.148853Z",
+     "shell.execute_reply": "2024-08-27T14:36:56.146084Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -420,7 +453,14 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-08-27T14:36:56.162613Z",
+     "iopub.status.busy": "2024-08-27T14:36:56.161826Z",
+     "iopub.status.idle": "2024-08-27T14:36:56.179883Z",
+     "shell.execute_reply": "2024-08-27T14:36:56.177509Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -438,7 +478,14 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-08-27T14:36:56.195235Z",
+     "iopub.status.busy": "2024-08-27T14:36:56.192624Z",
+     "iopub.status.idle": "2024-08-27T14:36:56.207080Z",
+     "shell.execute_reply": "2024-08-27T14:36:56.204152Z"
+    }
+   },
    "outputs": [],
    "source": [
     "couplings = scanPars_fixed.groupby(['gq','gchi'])"
@@ -447,7 +494,14 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-08-27T14:36:56.221413Z",
+     "iopub.status.busy": "2024-08-27T14:36:56.218613Z",
+     "iopub.status.idle": "2024-08-27T14:36:56.282655Z",
+     "shell.execute_reply": "2024-08-27T14:36:56.279958Z"
+    }
+   },
    "outputs": [
     {
      "data": {
