--- a/notebooks/drawGraphs.ipynb
+++ b/notebooks/drawGraphs.ipynb
@@ -2,9 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 1,
    "id": "a1a2c9ac",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-08-27T14:37:36.631915Z",
+     "iopub.status.busy": "2024-08-27T14:37:36.630805Z",
+     "iopub.status.idle": "2024-08-27T14:37:37.071429Z",
+     "shell.execute_reply": "2024-08-27T14:37:37.069241Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import sys,os\n",
@@ -30,9 +37,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 2,
    "id": "8b7c6241",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-08-27T14:37:37.082156Z",
+     "iopub.status.busy": "2024-08-27T14:37:37.081321Z",
+     "iopub.status.idle": "2024-08-27T14:37:37.114412Z",
+     "shell.execute_reply": "2024-08-27T14:37:37.112215Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from smodels.base import runtime\n",
@@ -46,9 +60,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 3,
    "id": "f610b4ca",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-08-27T14:37:37.125999Z",
+     "iopub.status.busy": "2024-08-27T14:37:37.125260Z",
+     "iopub.status.idle": "2024-08-27T14:37:37.304254Z",
+     "shell.execute_reply": "2024-08-27T14:37:37.301946Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -110,7 +131,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7b2f14366150>"
+       "<graphviz.graphs.Digraph at 0x7c9470122c90>"
       ]
      },
      "metadata": {},
@@ -129,9 +150,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 4,
    "id": "e610c254",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-08-27T14:37:37.313872Z",
+     "iopub.status.busy": "2024-08-27T14:37:37.312788Z",
+     "iopub.status.idle": "2024-08-27T14:37:37.404092Z",
+     "shell.execute_reply": "2024-08-27T14:37:37.401984Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -217,18 +245,11 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7b2f153d4170>"
+       "<graphviz.graphs.Digraph at 0x7c94729ecec0>"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Opening in existing browser session.\n"
-     ]
     }
    ],
    "source": [
@@ -243,9 +264,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 5,
    "id": "847f92e9",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-08-27T14:37:37.412517Z",
+     "iopub.status.busy": "2024-08-27T14:37:37.411814Z",
+     "iopub.status.idle": "2024-08-27T14:37:37.555108Z",
+     "shell.execute_reply": "2024-08-27T14:37:37.553166Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -367,7 +395,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7b2f15d30f80>"
+       "<graphviz.graphs.Digraph at 0x7c9470bbede0>"
       ]
      },
      "metadata": {},
@@ -387,9 +415,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 6,
    "id": "b6f2d83d",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-08-27T14:37:37.565179Z",
+     "iopub.status.busy": "2024-08-27T14:37:37.564383Z",
+     "iopub.status.idle": "2024-08-27T14:37:37.657820Z",
+     "shell.execute_reply": "2024-08-27T14:37:37.655772Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -463,7 +498,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7b2f15351730>"
+       "<graphviz.graphs.Digraph at 0x7c947008f1d0>"
       ]
      },
      "metadata": {},
@@ -481,9 +516,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 7,
    "id": "9ebdf8cd",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-08-27T14:37:37.666258Z",
+     "iopub.status.busy": "2024-08-27T14:37:37.665538Z",
+     "iopub.status.idle": "2024-08-27T14:37:37.835267Z",
+     "shell.execute_reply": "2024-08-27T14:37:37.832704Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -593,7 +635,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7b2f15352030>"
+       "<graphviz.graphs.Digraph at 0x7c9470bbede0>"
       ]
      },
      "metadata": {},
@@ -707,7 +749,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7b2f15350920>"
+       "<graphviz.graphs.Digraph at 0x7c947008ffe0>"
       ]
      },
      "metadata": {},
@@ -728,9 +770,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 8,
    "id": "e40365d9",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-08-27T14:37:37.844960Z",
+     "iopub.status.busy": "2024-08-27T14:37:37.843882Z",
+     "iopub.status.idle": "2024-08-27T14:37:37.945652Z",
+     "shell.execute_reply": "2024-08-27T14:37:37.943160Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -852,7 +901,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7b2f218bad80>"
+       "<graphviz.graphs.Digraph at 0x7c947008fbc0>"
       ]
      },
      "metadata": {},
@@ -872,9 +921,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 9,
    "id": "ebe4bd7a",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-08-27T14:37:37.956225Z",
+     "iopub.status.busy": "2024-08-27T14:37:37.955501Z",
+     "iopub.status.idle": "2024-08-27T14:37:38.052220Z",
+     "shell.execute_reply": "2024-08-27T14:37:38.049382Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -996,7 +1052,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7b2f15352030>"
+       "<graphviz.graphs.Digraph at 0x7c9470bbede0>"
       ]
      },
      "metadata": {},
@@ -1018,9 +1074,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 10,
    "id": "2098df7f",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-08-27T14:37:38.063767Z",
+     "iopub.status.busy": "2024-08-27T14:37:38.063024Z",
+     "iopub.status.idle": "2024-08-27T14:37:38.244521Z",
+     "shell.execute_reply": "2024-08-27T14:37:38.242809Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1094,7 +1157,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7b2f15352d80>"
+       "<graphviz.graphs.Digraph at 0x7c947008f7d0>"
       ]
      },
      "metadata": {},
@@ -1172,7 +1235,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7b2f153527b0>"
+       "<graphviz.graphs.Digraph at 0x7c9470bbede0>"
       ]
      },
      "metadata": {},
@@ -1196,9 +1259,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 11,
    "id": "dfdef181",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-08-27T14:37:38.254772Z",
+     "iopub.status.busy": "2024-08-27T14:37:38.253971Z",
+     "iopub.status.idle": "2024-08-27T14:37:38.341922Z",
+     "shell.execute_reply": "2024-08-27T14:37:38.340173Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1248,7 +1318,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7b2f15352e40>"
+       "<graphviz.graphs.Digraph at 0x7c947008f2c0>"
       ]
      },
      "metadata": {},
@@ -1269,9 +1339,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 12,
    "id": "3b25a533",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-08-27T14:37:38.351479Z",
+     "iopub.status.busy": "2024-08-27T14:37:38.350774Z",
+     "iopub.status.idle": "2024-08-27T14:37:38.536505Z",
+     "shell.execute_reply": "2024-08-27T14:37:38.534104Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1345,7 +1422,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7b2f145e70b0>"
+       "<graphviz.graphs.Digraph at 0x7c9470bf2b40>"
       ]
      },
      "metadata": {},
@@ -1423,7 +1500,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7b2f145e60f0>"
+       "<graphviz.graphs.Digraph at 0x7c947008ede0>"
       ]
      },
      "metadata": {},
@@ -1451,9 +1528,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 13,
    "id": "27ab45b7",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-08-27T14:37:38.544710Z",
+     "iopub.status.busy": "2024-08-27T14:37:38.543925Z",
+     "iopub.status.idle": "2024-08-27T14:37:38.640017Z",
+     "shell.execute_reply": "2024-08-27T14:37:38.637946Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1503,7 +1587,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7b2f15dd8a70>"
+       "<graphviz.graphs.Digraph at 0x7c947008ede0>"
       ]
      },
      "metadata": {},
@@ -1525,9 +1609,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 14,
    "id": "f64d5db3",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-08-27T14:37:38.648248Z",
+     "iopub.status.busy": "2024-08-27T14:37:38.647528Z",
+     "iopub.status.idle": "2024-08-27T14:37:38.884620Z",
+     "shell.execute_reply": "2024-08-27T14:37:38.881751Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1673,7 +1764,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7b2f1440cce0>"
+       "<graphviz.graphs.Digraph at 0x7c94729ecec0>"
       ]
      },
      "metadata": {},
@@ -1799,7 +1890,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7b2f15332570>"
+       "<graphviz.graphs.Digraph at 0x7c947008fd70>"
       ]
      },
      "metadata": {},
@@ -1821,9 +1912,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 15,
    "id": "6ed39cd7",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-08-27T14:37:38.895753Z",
+     "iopub.status.busy": "2024-08-27T14:37:38.894037Z",
+     "iopub.status.idle": "2024-08-27T14:37:39.227337Z",
+     "shell.execute_reply": "2024-08-27T14:37:39.225033Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1897,7 +1995,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7b2f1440ca70>"
+       "<graphviz.graphs.Digraph at 0x7c9470bbede0>"
       ]
      },
      "metadata": {},
@@ -1975,7 +2073,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7b2f1440c050>"
+       "<graphviz.graphs.Digraph at 0x7c94700c0d10>"
       ]
      },
      "metadata": {},
@@ -2053,7 +2151,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7b2f1440f650>"
+       "<graphviz.graphs.Digraph at 0x7c94700c09b0>"
       ]
      },
      "metadata": {},
@@ -2081,9 +2179,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 16,
    "id": "32681ea2",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-08-27T14:37:39.236556Z",
+     "iopub.status.busy": "2024-08-27T14:37:39.235577Z",
+     "iopub.status.idle": "2024-08-27T14:37:39.280442Z",
+     "shell.execute_reply": "2024-08-27T14:37:39.277722Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Load the BSM model\n",
@@ -2095,9 +2200,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 17,
    "id": "d0931238",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-08-27T14:37:39.291651Z",
+     "iopub.status.busy": "2024-08-27T14:37:39.290577Z",
+     "iopub.status.idle": "2024-08-27T14:37:39.394209Z",
+     "shell.execute_reply": "2024-08-27T14:37:39.392064Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2159,7 +2271,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7b2f2aad5820>"
+       "<graphviz.graphs.Digraph at 0x7c94729edb80>"
       ]
      },
      "metadata": {},
@@ -2178,9 +2290,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 18,
    "id": "7f839ece",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-08-27T14:37:39.403279Z",
+     "iopub.status.busy": "2024-08-27T14:37:39.402291Z",
+     "iopub.status.idle": "2024-08-27T14:37:39.493873Z",
+     "shell.execute_reply": "2024-08-27T14:37:39.490624Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2242,7 +2361,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7b2f14311580>"
+       "<graphviz.graphs.Digraph at 0x7c9470042570>"
       ]
      },
      "metadata": {},
@@ -2262,9 +2381,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 19,
    "id": "30536430",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-08-27T14:37:39.508195Z",
+     "iopub.status.busy": "2024-08-27T14:37:39.507052Z",
+     "iopub.status.idle": "2024-08-27T14:37:39.676709Z",
+     "shell.execute_reply": "2024-08-27T14:37:39.674543Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2386,7 +2512,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7b2f15332b10>"
+       "<graphviz.graphs.Digraph at 0x7c947008f1a0>"
       ]
      },
      "metadata": {},
@@ -2409,9 +2535,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 20,
    "id": "45195024",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-08-27T14:37:39.685959Z",
+     "iopub.status.busy": "2024-08-27T14:37:39.684077Z",
+     "iopub.status.idle": "2024-08-27T14:37:39.837516Z",
+     "shell.execute_reply": "2024-08-27T14:37:39.835577Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2605,7 +2738,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7b2f145e6120>"
+       "<graphviz.graphs.Digraph at 0x7c947008f0e0>"
       ]
      },
      "metadata": {},
