--- a/notebooks/2MDM-dijet-plots.ipynb
+++ b/notebooks/2MDM-dijet-plots.ipynb
@@ -21,12 +21,10 @@
    "source": [
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\", message=\"numpy.dtype size changed\")\n",
-    "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.patches as mpatches\n",
     "from auxPlots import columnsDict, colorDict, defaultPars\n",
-    "import itertools\n",
     "\n",
     "pd.option_context('display.max_columns', None)\n",
     "pd.option_context('display.max_rows', None)\n",
@@ -64,7 +62,7 @@
    ],
    "source": [
     "#Merge with SModelS DataFrame\n",
-    "pclFile = '../data/smodels_results_v3.pcl'\n",
+    "pclFile = '../data/smodels_results.pcl'\n",
     "dataDF = pd.read_pickle(pclFile)\n",
     "dataDF.rename(columns=columnsDict,inplace=True)\n",
     "dropCols = [c for c in dataDF.columns if ('Output' in c or 'weight' in c)]\n",
@@ -94,18 +92,6 @@
     "#Set points without results with r == 0\n",
     "dataDF.fillna(value={'r' : 0}, inplace=True)\n",
     "dataDF.sort_values(by='r',ascending=False,inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Sort filenames according to the maximum value of r within each filename group (max r)\n",
-    "# groups = dataDF.groupby(level='filename')['r'].max().sort_values(ascending=False)\n",
-    "# Sort dataframe according to the filename sorting\n",
-    "# dataDF = dataDF.loc[groups.index]"
    ]
   },
   {
