--- a/notebooks/2MDM-monojet-default-couplings.ipynb
+++ b/notebooks/2MDM-monojet-default-couplings.ipynb
@@ -246,7 +246,7 @@
     "    # Sort by r, so highest value comes first\n",
     "    data = anadf.sort_values(by='r',axis=0,ascending=False)\n",
     "    # Keep only the strongest result for a given analysis (first entry)\n",
-    "    data = data.groupby(level='filename').first()\n",
+    "    data = data.groupby(level='filename').head(1)\n",
     "    x = data['mZp']\n",
     "    y = data['mChi']\n",
     "    # sc = plt.scatter(x,y,s=60, color=colorDict[ana], label=legendsDict[ana], alpha=0.7)\n",
